Fri Dec 10 18:42:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Object_KeyC.cpp:
          Regenerated after the changes of Jeff below

Fri Dec 10 12:29:34 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_sequence/cdr_op_cs.cpp:

          - Changed C-style cast to const_cast in generated code for
            optimized handling of octet sequences.

          - Changed generated local variable name from 'oseq' to
            '_tao_octet_seq' to minimize the chance of name clashes.

          - Removed alternate code generation that had a guard for
            VC 5 only, since we no longer support that version.

Fri Dec 10 17:45:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Object_KeyC.{h,cpp,i,inl}:
          Regenerated and replace .i file with .inl variant

        * tao/Makefile.am:
          Updated because of change above

        * tao/Object_Key.pidl:
          Mention the diff to apply

        * tao/diffs/Object_Key.diff:
          Manual diff that must be applied after regeneration

Fri Dec 10 10:40:30 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/IFR_Server.cpp:

          Removed unnecessary text output.

        * orbsvcs/IFR_Service/IFR_Service.cpp:

          Cosmetic changes to code formatting.

        * orbsvcs/orbsvcs/IFRService/Contained_i.cpp:

          Removed redundant exception throw of BAD_PARAM - it is
          already done by a previous function call.

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:

          Added logical OR of OMGVMCID to the minor code of a
          BAD_PARAM exception throw, as has been done for all other
          such CORBA system exception throws in TAO.

Fri Dec 10 09:39:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Dynamic.pidl:
          Added include of orb.idl again, it is needed at this moment
          to get CORBA::Typecode
